// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ezd-typography ezd-typography-rtl"
  direction="rtl"
/>
`;

exports[`Typography rtl render component should be rendered correctly in RTL direction 2`] = `
<article
  class="ezd-typography ezd-typography-rtl"
  direction="rtl"
/>
`;

exports[`Typography rtl render component should be rendered correctly in RTL direction 3`] = `
<h1
  class="ezd-typography ezd-typography-rtl"
  direction="rtl"
/>
`;

exports[`Typography rtl render component should be rendered correctly in RTL direction 4`] = `
<a
  class="ezd-typography ezd-typography-rtl"
  direction="rtl"
/>
`;
